// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-rbac - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Helps users find the right Azure RBAC role for an identity with least privilege access, then generate CLI commands and Bicep code to assign it. Also provides guidance on permissions required to grant roles. WHEN: what role should I assign, least privilege role, RBAC role for, role to read blobs, role for managed identity, custom role definition, assign role to identity, what role do I need to grant access, permissions to assign roles.",
  "extractedKeywords": [
    "access",
    "also",
    "assign",
    "azure",
    "bicep",
    "blobs",
    "cli",
    "code",
    "commands",
    "custom",
    "definition",
    "find",
    "generate",
    "grant",
    "guidance",
    "helps",
    "identity",
    "least",
    "managed",
    "need",
    "permissions",
    "privilege",
    "provides",
    "rbac",
    "read",
    "required",
    "right",
    "role",
    "roles",
    "should",
    "then",
    "users",
    "what",
    "when",
    "with",
  ],
  "name": "azure-rbac",
}
`;

exports[`azure-rbac - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "access",
  "also",
  "assign",
  "azure",
  "bicep",
  "blobs",
  "cli",
  "code",
  "commands",
  "custom",
  "definition",
  "find",
  "generate",
  "grant",
  "guidance",
  "helps",
  "identity",
  "least",
  "managed",
  "need",
  "permissions",
  "privilege",
  "provides",
  "rbac",
  "read",
  "required",
  "right",
  "role",
  "roles",
  "should",
  "then",
  "users",
  "what",
  "when",
  "with",
]
`;
